# clAPT-0.1

./: AUTHORS  ChangeLog-20160909  ChangeLog20160909  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
man/: Makefile.am  clapt.1
po/: ChangeLog  POTFILES.in
source/: Makefile.am  cab-ayuda.c  cab-bersyon.c  cab-main.c  clapt.h
